<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

   <ListPreference
      android:entries="@array/guesses_list"
      android:entryValues="@array/guesses_list"
      android:key="pref_numberOfChoices"
      android:title="@string/number_of_choices"
      android:summary="@string/number_of_choices_description"
      android:persistent="true"
      android:defaultValue="4" />

   <ListPreference
       android:entries="@array/levels_list"
       android:entryValues="@array/levels_list"
       android:key="pref_levelToInclude"
       android:title="@string/words_level"
       android:summary="@string/words_level_description"
       android:persistent="true"
       android:defaultValue="Basic" />

   <MultiSelectListPreference
      android:entries="@array/categories_list_for_settings"
      android:entryValues="@array/categories_list"
      android:key="pref_categoriesToInclude"
      android:title="@string/word_categories"
      android:summary="@string/word_categories_description"
      android:persistent="true"
      android:defaultValue="@array/categories_list" />

</PreferenceScreen>