<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_word_spell"
    tools:context="com.ahmadalhaiqi.vocabgame.WordGuessActivityFragment"
    android:orientation="vertical"
    android:id="@+id/spellLinearLayout">

    <LinearLayout
        android:id="@+id/badgesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/questionNtumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="3dp">

        <LinearLayout
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/wordImageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/spacing"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="2"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_description"
                    android:paddingBottom="@dimen/spacing"
                    android:paddingTop="@dimen/spacing"
                    android:scaleType="fitCenter"
                    android:src="@drawable/noimage" />

                <TextView
                    android:id="@+id/wordTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/spacing"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"
                    android:textSize="36sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/hintButton"
                    style="@android:style/Widget.Material.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_hint"
                    android:paddingBottom="0dp"
                    android:paddingTop="16dp" />

                <Button
                    android:id="@+id/shareButton"
                    style="@android:style/Widget.Material.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_share"
                    android:paddingBottom="0dp"
                    android:paddingTop="16dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/guessCountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/spell_word"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="3dp">

        <android.support.v7.widget.GridLayout xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lettersGridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="16dp"
            grid:columnCount="6"
            grid:rowCount="2"
            grid:rowOrderPreserved="false"
            grid:useDefaultMargins="false">

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />

            <Button
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                grid:layout_columnWeight="1" />


        </android.support.v7.widget.GridLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/answerLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="New Button"
            android:textColor="@color/button_text_color" />

        <Button
            android:id="@+id/button8"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:text="New Button"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/answerTextView"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/answer_size"
        android:textStyle="bold"/>
</LinearLayout>
